@@ -9,7 +9,8 @@ $Id$
 	Fixed a quoting problem in configure.in
 	Changed top of help to use 'show' instead of M-x
 	Fixed a bug in the summary field for user-created aliases
-	
+	Added "reply zaway" which sends a zaway response to the current msg.
+		
 1.2.1-pre-1
 	Added RCS Id strings to all files.
 	'show keymaps' shows details of all keymaps after summary list.
